# log-anonymizer

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  app.py  docker-compose.yml  log-anonymizer.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ADMIN_GUIDE.md  INSTALL_DOCKER.md  INSTALL_WHEEL.md  RELEASE.md  RELEASE_TEMPLATE.md  RELEASING.md  USER_GUIDE.md
examples/: .exclude  rules.json  rules_legacy_actions.json  rules_v1.json
scripts/: smoke_test_docker.sh  smoke_test_wheel.sh
src/log_anonymizer/: __init__.py  __main__.py  anonymizer.py  batch.py  builtin_rules.py  cli.py  exclude_filter.py  filename_anonymizer.py  input_handler.py  processor.py  progress.py  progress_cli.py  rule_actions.py  rules_loader.py  rules_validation.py  ui.py  ui_app.py
src/log_anonymizer/application/: anonymize_logs.py  preview_anonymization.py  preview_highlighting.py
src/log_anonymizer/config/: app_config.py  logging_config.py
src/log_anonymizer/domain/: rules.py
src/log_anonymizer/engine/: anonymizer.py
src/log_anonymizer/infrastructure/filtering/: exclude_filter.py  file_collector.py
src/log_anonymizer/infrastructure/input_handlers/: base.py  directory.py  single_file.py  tar_gz_archive.py  zip_archive.py
src/log_anonymizer/infrastructure/output/: tar_gz_output.py  zip_output.py
src/log_anonymizer/infrastructure/rules_loader/: json_rules_loader.py
src/log_anonymizer/profiling/: __init__.py  detectors.py  masking.py  profiler.py  runner.py  suggestions.py
src/log_anonymizer/utils/: hashing.py  io.py  paths.py
tests/: conftest.py  test_actions.py  test_anonymizer.py  test_archives.py  test_batch_processing.py  test_cli.py  test_exclude_filter.py  test_filename_anonymization.py  test_parallel_processing.py  test_preview_anonymization.py  test_preview_highlighting.py  test_profiling.py  test_progress_events.py  test_rules_loader.py  test_rules_validation.py  test_text_detection.py
